--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<button id="openModal">Open Modal</button>
-	<div class="modal">
+	<div class="modal" id="myModal">
 		<div class="modal-content">
 			<div class="modal-header">
 				<h2>Modal Header</h2>
